--- a/dashboard.html
+++ b/dashboard.html
@@ -15,28 +15,33 @@
 </head>
 
 <body>
- 
+
   <header>
-    <div class="search-box">
-      <input type="text" placeholder="Search..." />
-      <button type="submit">Search</button>
+    <div class="wrap">
+      <div class="search">
+        <input type="text" class="searchTerm" placeholder="search">
+        <button type="submit" class="searchButton">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
     </div>
     <div><img class="profile-h" src="img/p.jpg" alt=""></div>
 
   </header>
 
-  <section class="menu">
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="menu-icon">&#9776;</label>
-    
+  <input type="checkbox" id="check">
+  <label for="check">
+    <i class="fas fa-bars" id="btn"></i>
+    <i class="fas fa-times" id="cancel"></i>
+  </label>
+  <div class="sidebar">
+    <h1 class="ad">Admin</h1>
     <ul>
-      <h1 class="ad">Admin <img class="profile-pic" src="img/p.jpg" alt=""></h1>
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Products <img class="icon" src="img/product.svg"> </a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Setting <img class="icon" src="img/setting.svg"> </a></li>
+      <li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
+      <li><a href="#"><i class="fas fa-link"></i>Products<img class="icon" src="img/pr.svg" ></a></li>
+      <li><a href="#"><i class="fas fa-stream"></i>Team</a></li>
     </ul>
-  </section>
+  </div>
   <div class="context">
     Products<span>
       <img class="pr" src="img/pr.svg"> </span>
@@ -47,11 +52,7 @@
 
   </div>
 
-  <div class="image-container">
-    <img src="" alt="Image 1">
-    <img src="" alt="Image 2">
-    <img src="" alt="Image 2">
-  </div>
+
 
 </body>
 
